doc: added readme

--- a/package.json
+++ b/package.json
@@ -6,11 +6,32 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "ESLint",
+    "ESLint plugin",
+    "ESLint config",
+    "TypeScript",
+    "JavaScript",
+    "code quality",
+    "linting",
+    "code style",
+    "coding style",
+    "best practices",
+    "code consistency",
+    "maintainability",
+    "error prevention",
+    "bug prevention",
+    "React",
+    "Angular",
+    "framework",
+    "front-end",
+    "web development"
+  ],
+  "license": "MIT",
+  "author": ".devmy",
+  "description": "This library exports ESLint configurations with the recommended rules from the Devmy team for TypeScript and popular frameworks like React, Angular or etc.... It helps ensure code quality, consistency, and maintainability across your projects.",
   "devDependencies": {
+    "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
