--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
-  "name": "@devmy/eslint",
+  "name": "@devmy/eslint-plugin",
   "version": "1.0.0",
+  "type": "commonjs",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "release": "semantic-release"
   },
   "keywords": [
@@ -37,6 +48,20 @@
   "bugs": {
     "url": "https://github.com/acadevmy/eslint/issues"
   },
+  "dependencies": {
+    "@ngrx/eslint-plugin": "18.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/utils": "^8.17.0",
+    "angular-eslint": "19.0.0",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-const-case": "^1.2.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "jiti": "^2.4.1",
+    "typescript-eslint": "8.17.0"
+  },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
@@ -44,13 +69,10 @@
     "@semantic-release/github": "github:semantic-release/git",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.1",
+    "@types/eslint": "^9.6.1",
     "@types/node": "^22.10.1",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript": "^5.7.2",
-    "semantic-release": "^24.0.0"
+    "semantic-release": "^24.0.0",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
   }
 }
