--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
+    "target": "es2022",
+    "lib": ["es2022"],
+    "module": "NodeNext",
     "types": ["node"],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true
   },
   "include": ["src/**/*"]
 }
