--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@devmy/eslint-plugin",
   "version": "1.0.0",
+  "private": false,
   "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,6 +19,9 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,html}'",
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx,html}' --fix",
     "release": "semantic-release"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [
     "ESLint",
@@ -63,7 +67,6 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.0",
     "eslint-plugin-unicorn": "^56.0.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "jiti": "^2.4.1",
     "typescript-eslint": "8.17.0"
   },
@@ -82,5 +85,6 @@
   },
   "peerDependencies": {
     "eslint": "^8.57.0 || ^9.0.0"
-  }
+  },
+  "packageManager": "npm@10.8.1"
 }
