--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.0",
     "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jiti": "^2.4.1",
     "typescript-eslint": "8.17.0"
   },
