--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@angular-eslint/eslint-plugin-template": "^18.0.0 || ^19.0.0",
+    "@eslint/js": "^9.18.0",
     "@ngrx/eslint-plugin": "18.1.1",
     "@stylistic/eslint-plugin-ts": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
