--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "angular-eslint": "^18.0.0 || ^19.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-const-case": "^1.2.2",
+    "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.0",
