--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,16 +21,19 @@ jobs:
       - name: Setup Corepack
         run: |
           corepack enable
-          corepack prepare npm@10.8.1 --activate
+          corepack prepare --activate
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build project
-        run: npm run build
+        run: pnpm run build
+      
+      - name: Lint project
+        run: pnpm run lint
 
       - name: Run Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm run release
+        run: pnpm run release
