--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "tsup",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,html}'",
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx,html}' --fix",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "test": "jest"
   },
   "publishConfig": {
     "access": "public"
@@ -56,10 +57,13 @@
   },
   "dependencies": {
     "@angular-eslint/eslint-plugin-template": "^18.0.0 || ^19.0.0",
+    "@angular-eslint/test-utils": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
     "@eslint/js": "^9.18.0",
     "@ngrx/eslint-plugin": "18.1.1",
     "@stylistic/eslint-plugin-ts": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/rule-tester": "^8.20.0",
     "@typescript-eslint/utils": "^8.17.0",
     "angular-eslint": "^18.0.0 || ^19.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -83,7 +87,10 @@
     "@semantic-release/release-notes-generator": "^14.0.1",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.10.1",
+    "jest": "^29.7.0",
     "semantic-release": "^24.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
